Finished mobile media query

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <h4>Events</h4></div>
                 <div class="box">
                     <i class="icon2 far fa-handshake"></i>
-                    <h4>Collaboration</h4></div>
+                    <h4>Collaborations</h4></div>
             </div>
         </div>
 
@@ -89,9 +89,7 @@
                 <img src="styles/assets/andie-gomez-acebo-744590-unsplash.jpg" alt="">
                 <div class="wrapper">
                     <div class="text1">
-                        <h2>Sustainable 
-                        </h2>
-                        <h2>Materials</h2>
+                        <h2>Sustainable Materials</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium eos quaerat eius nobis expedita quam magni vero porro aperiam hic, perspiciatis laborum nostrum voluptatum quae facilis ratione, ab magnam ea!</p>
                         <p class="button">Read More</p>
                 </div>
@@ -117,10 +115,15 @@
             <!-- Newsletter Area -->
             <div class="column column1">
                 <ul>
-                    <li><p>Home</p></li>
+                    <!-- <li><p>Home</p></li>
                     <li><p>Blog</p></li>
                     <li><p>Gallery</p></li>
-                    <li><p>Contact</p></li>
+                    <li><p>Contact</p></li> -->
+
+                    <li><a href="index.html#header">Home</a></li>
+                    <li><a href="index.html#main">Blog</a></li>
+                    <li><a href="index.html#secondary">Gallery</a></li>
+                    <li><a href="index.html#footer">Contact</a></li>
                 </ul>
             </div>
             <div class="column column2">
@@ -130,7 +133,8 @@
                     <form action="#" method = "POST" id="mailing" name="mailing">
                             <input type="email" id="email" name="email" placeholder="email address" required>
                     </form>
-                    <span class="button2">Subscribe</span>
+                    <!-- <span class="button2">Subscribe</span> -->
+                    <a href="#" class="button2">Subscribe</a>
                 </ul>
             </div>
             <div class="column column3">
