Final touches and img alt text

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <section id="main">
         <!-- Article Area-->
         <div class="article clearfix wrapper">
-            <img class="img1" src="styles/assets/image-6@2x.png" alt="">
-            <img class="img2" src="./styles/assets/kyle-frederick-1042416-unsplash.jpg" alt="">
+            <img class="img1" src="styles/assets/image-6@2x.png" alt="Trying on Jewelry">
+            <img class="img2" src="./styles/assets/kyle-frederick-1042416-unsplash.jpg" alt="Trying on jewelry wide">
             <div class="text4">
                 <h2>Hand Crafted</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi corporis fuga beatae atque debitis accusantium magni recusandae voluptatum sapiente quas expedita, reiciendis, facere consequatur sit, delectus illum distinctio exercitationem? Eligendi repellat soluta pariatur magni quaerat molestias labore excepturi distinctio, et at. Architecto dolor, eum quae odit molestiae vitae nihil odio non corrupti, rerum corporis facere quaerat laborum fugiat fuga provident.</p>
@@ -59,9 +59,9 @@
             <div class="wrapper">
                 <h2>LATEST COLLECTION</h2>
                 <div class= "collection clearfix">
-                    <div class="box"><img src="styles/assets/image-2_2@2x.png"></div>
-                    <div class="box"><img src="styles/assets/image-4@2x.png"></div>
-                    <div class="box"><img src="styles/assets/image-3.jpg"></div>
+                    <div class="box"><img src="styles/assets/image-2_2@2x.png" alt="Hanging Necklaces"></div>
+                    <div class="box"><img src="styles/assets/image-4@2x.png" alt="Golden rings"></div>
+                    <div class="box"><img src="styles/assets/image-3.jpg" alt="Assorted jewelry"></div>
                 </div>
             </div>
         </div>
@@ -86,7 +86,7 @@
         <!-- Row System -->
         <div class="rows">
             <div class="row1 clearfix">
-                <img src="styles/assets/andie-gomez-acebo-744590-unsplash.jpg" alt="">
+                <img src="styles/assets/andie-gomez-acebo-744590-unsplash.jpg" alt="Model with necklace">
                 <div class="wrapper">
                     <div class="text1">
                         <h2>Sustainable Materials</h2>
@@ -98,7 +98,7 @@
             </div>
 
             <div class="row2 clearfix">
-                <img src="styles/assets/image-2-copy@2x.png" alt="">
+                <img src="styles/assets/image-2-copy@2x.png" alt="Model hand with jewelry">
                 <div class="wrapper">
                     <div class="text2">
                         <h2>Mix & Match</h2>
