--- a/index.html
+++ b/index.html
@@ -32,14 +32,13 @@
             <!-- Social Media Link Icons-->
             <div class="links">
                 <ul>
-                    <li class="icon pos1"><i class=" fab fa-instagram"></i></li>
-                    <li class="icon pos2"><i class="fab fa-facebook-f"></i></li>
-                    <li class="icon pos3"><i class="fab fa-snapchat-ghost"></i></li>
-                    <li class="icon pos4"><i class="fab fa-twitter"></i></li>
+                    <li class="icon pos1"><a href="#"><i class=" fab fa-instagram"></i></a></li>
+                    <li class="icon pos2"><a href="#"><i class=" fab fa-facebook-f"></i></a></li>
+                    <li class="icon pos3"><a href="#"><i class=" fab fa-snapchat-ghost"></i></a></li>
+                    <li class="icon pos4"><a href="#"><i class=" fab fa-twitter"></i></a></li>
                 </ul>
             </div>
         </div>
-        
     </section>
 
     <section id="main">
@@ -53,7 +52,6 @@
                 <p class="button">Read More</p>
             </div>
         </div>
-
         <!-- 3 Images -->
         <div class="grid">
             <div class="wrapper">
@@ -82,21 +80,19 @@
                     <h4>Collaborations</h4></div>
             </div>
         </div>
-
         <!-- Row System -->
         <div class="rows">
             <div class="row1 clearfix">
-                <img src="styles/assets/andie-gomez-acebo-744590-unsplash.jpg" alt="Model with necklace">
+                <img class="rep1" src="styles/assets/image-2@2x.png" alt="Model With Necklace">
+                <img class="rep2" src="styles/assets/andie-gomez-acebo-744590-unsplash.jpg" alt="Model with necklace">
                 <div class="wrapper">
                     <div class="text1">
                         <h2>Sustainable Materials</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium eos quaerat eius nobis expedita quam magni vero porro aperiam hic, perspiciatis laborum nostrum voluptatum quae facilis ratione, ab magnam ea!</p>
                         <p class="button">Read More</p>
+                    </div>
                 </div>
-                </div>
-                
             </div>
-
             <div class="row2 clearfix">
                 <img src="styles/assets/image-2-copy@2x.png" alt="Model hand with jewelry">
                 <div class="wrapper">
@@ -115,11 +111,6 @@
             <!-- Newsletter Area -->
             <div class="column column1">
                 <ul>
-                    <!-- <li><p>Home</p></li>
-                    <li><p>Blog</p></li>
-                    <li><p>Gallery</p></li>
-                    <li><p>Contact</p></li> -->
-
                     <li><a href="index.html#header">Home</a></li>
                     <li><a href="index.html#main">Blog</a></li>
                     <li><a href="index.html#secondary">Gallery</a></li>
